[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Enemy/Ballista.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/skullBoss.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enemy/SkeletonBoss.gd" type="Script" id=3]
[ext_resource path="res://Shaders/flash.shader" type="Shader" id=4]
[ext_resource path="res://Characters/HealthManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://SFX/enemyDamage.wav" type="AudioStream" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/flash_color = Color( 0.960784, 0.929412, 0.729412, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 16 )

[node name="SkeletonBoss" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="GigaSpawn" type="Position2D" parent="."]
position = Vector2( 0, 8 )

[node name="Ballista" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 0 )
fireRate = 1.0

[node name="Ballista2" parent="." instance=ExtResource( 1 )]
position = Vector2( -32, 0 )
fireRate = 1.0

[node name="Skull" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthManager" parent="." instance=ExtResource( 5 )]
maxHealth = 65
hurtSound = ExtResource( 6 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ChargedAtatck" type="Timer" parent="."]
autostart = true

[node name="ChargeTime" type="Timer" parent="."]
one_shot = true

[node name="Die" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.054902, 0.109804, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dead" from="HealthManager" to="." method="Die"]
[connection signal="timeout" from="FlashTimer" to="." method="FlashTimer"]
[connection signal="timeout" from="ChargedAtatck" to="." method="_on_ChargedAtatck_timeout"]
[connection signal="timeout" from="ChargeTime" to="." method="_on_ChargeTime_timeout"]
[connection signal="timeout" from="Die" to="." method="SpawnDeathParticles"]
